// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comphub - Main - Data Card Component should display base50 and tcc50 with 2 decimal places when rate is hourly 1`] = `
<pf-data-card
  comphubPages={[Function Object]}
  currentPageNumber={[Function Number]}
  firstDayOfMonth={[Function Date]}
  gridColumnsConfiguration={[Function Array]}
  gridContext={[Function Object]}
  jobDataSelection="null"
  jobResults$={[Function Observable]}
  jobResultsLoading$={[Function Store]}
  jobResultsLoadingError$={[Function Store]}
  jobTitle="null"
  jobTitleSubscription={[Function Subscriber]}
  marketDataChange="false"
  marketDataChange$={[Function Store]}
  marketDataChangeSubscription={[Function Subscriber]}
  pageSize={[Function Number]}
  paymarketId="null"
  paymarketSubscription={[Function Subscriber]}
  peerBannerOpen$={[Function Store]}
  rates={[Function Array]}
  selectedJobData$={[Function Store]}
  selectedJobSubscription={[Function Subscriber]}
  selectedJobTitle$={[Function Store]}
  selectedPaymarket$={[Function Store]}
  selectedRate={[Function Object]}
  store={[Function Store]}
  winRef={[Function Object]}
  workflowContext={[Function Object]}
  workflowContext$={[Function Store]}
  workflowContextSubscription={[Function Subscriber]}
>
  <pf-card-layout
    pageiconclass="database"
    pagesubtitle="Let's find the most timely and relevant data sources for pricing your job"
    pagetitle="Data"
  >
    
    
    <div
      class="d-flex flex-row content-top-bar"
    >
      <div
        class="d-flex flex-row ml-auto"
      >
        <div
          class="effective-date"
        >
          Effective Date: 
          <span>
            02/01/2019
          </span>
        </div>
        <div>
           Rate: 
          <kendo-dropdownlist
            class="rates-dropdown"
            data-qa-id="ddm-rate"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        <pf-async-container
          class="flex-grow-1"
        >
          <table
            class="table table-hover"
            data-qa-id="tbl-job-data-grid"
          >
            <thead>
              <tr
                class="main-column-header"
              >
                <th />
                
                <th
                  class="job-title-column sortable-header"
                  scope="col"
                >
                   Job Title 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="education-column hide-when-small sortable-header"
                  scope="col"
                >
                   Education 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="hide-when-small sortable-header"
                  scope="col"
                >
                   Years Experience 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="hide-when-small sortable-header"
                  scope="col"
                >
                   Manages 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="sortable-header"
                  scope="col"
                >
                   Base 50th 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="sortable-header"
                  scope="col"
                >
                   TCC 50th 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="text-center"
                  scope="col"
                >
                   Select 
                  
                </th>
              </tr>
            </thead>
            <tbody>
              
              
              <tr
                class="job-row"
              >
                <td
                  class="expand-caret"
                >
                  
                  <fa-icon
                    icon="caret-right"
                  />
                  
                </td>
                <td
                  class="text-column job-title-column"
                  title="Job A"
                >
                   Job A 
                </td>
                <td
                  class="text-column education-column hide-when-small"
                  title="College"
                >
                   College 
                </td>
                <td
                  class="text-column hide-when-small"
                >
                   6+ 
                </td>
                <td
                  class="text-column hide-when-small"
                >
                   No 
                </td>
                <td
                  class="number-column"
                >
                   $48.08 
                </td>
                <td
                  class="number-column"
                >
                   $48.08 
                </td>
                <td
                  class="text-center"
                >
                  <div
                    class="custom-control custom-radio"
                  >
                    <input
                      class="custom-control-input"
                      data-qa-id="chk-select-job-1"
                      id="customRadio-1"
                      name="select-job-data"
                      type="radio"
                    />
                    <label
                      class="custom-control-label"
                      for="customRadio-1"
                    >
                       
                    </label>
                  </div>
                </td>
              </tr>
              
              
            </tbody>
          </table>
          
        </pf-async-container>
      </div>
    </div>
  </pf-card-layout>
</pf-data-card>
`;

exports[`Comphub - Main - Data Card Component should display base50 and tcc50 with thousand seperator when rate is annual 1`] = `
<pf-data-card
  comphubPages={[Function Object]}
  currentPageNumber={[Function Number]}
  firstDayOfMonth={[Function Date]}
  gridColumnsConfiguration={[Function Array]}
  gridContext={[Function Object]}
  jobDataSelection="null"
  jobResults$={[Function Observable]}
  jobResultsLoading$={[Function Store]}
  jobResultsLoadingError$={[Function Store]}
  jobTitle="null"
  jobTitleSubscription={[Function Subscriber]}
  marketDataChange="false"
  marketDataChange$={[Function Store]}
  marketDataChangeSubscription={[Function Subscriber]}
  pageSize={[Function Number]}
  paymarketId="null"
  paymarketSubscription={[Function Subscriber]}
  peerBannerOpen$={[Function Store]}
  rates={[Function Array]}
  selectedJobData$={[Function Store]}
  selectedJobSubscription={[Function Subscriber]}
  selectedJobTitle$={[Function Store]}
  selectedPaymarket$={[Function Store]}
  selectedRate={[Function Object]}
  store={[Function Store]}
  winRef={[Function Object]}
  workflowContext={[Function Object]}
  workflowContext$={[Function Store]}
  workflowContextSubscription={[Function Subscriber]}
>
  <pf-card-layout
    pageiconclass="database"
    pagesubtitle="Let's find the most timely and relevant data sources for pricing your job"
    pagetitle="Data"
  >
    
    
    <div
      class="d-flex flex-row content-top-bar"
    >
      <div
        class="d-flex flex-row ml-auto"
      >
        <div
          class="effective-date"
        >
          Effective Date: 
          <span>
            02/01/2019
          </span>
        </div>
        <div>
           Rate: 
          <kendo-dropdownlist
            class="rates-dropdown"
            data-qa-id="ddm-rate"
          />
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        <pf-async-container
          class="flex-grow-1"
        >
          <table
            class="table table-hover"
            data-qa-id="tbl-job-data-grid"
          >
            <thead>
              <tr
                class="main-column-header"
              >
                <th />
                
                <th
                  class="job-title-column sortable-header"
                  scope="col"
                >
                   Job Title 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="education-column hide-when-small sortable-header"
                  scope="col"
                >
                   Education 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="hide-when-small sortable-header"
                  scope="col"
                >
                   Years Experience 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="hide-when-small sortable-header"
                  scope="col"
                >
                   Manages 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="sortable-header"
                  scope="col"
                >
                   Base 50th 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="sortable-header"
                  scope="col"
                >
                   TCC 50th 
                  
                  
                  
                  <span
                    class="unsorted-spacer"
                  />
                  
                </th>
                <th
                  class="text-center"
                  scope="col"
                >
                   Select 
                  
                </th>
              </tr>
            </thead>
            <tbody>
              
              
              <tr
                class="job-row"
              >
                <td
                  class="expand-caret"
                >
                  
                  <fa-icon
                    icon="caret-right"
                  />
                  
                </td>
                <td
                  class="text-column job-title-column"
                  title="Job A"
                >
                   Job A 
                </td>
                <td
                  class="text-column education-column hide-when-small"
                  title="College"
                >
                   College 
                </td>
                <td
                  class="text-column hide-when-small"
                >
                   6+ 
                </td>
                <td
                  class="text-column hide-when-small"
                >
                   No 
                </td>
                <td
                  class="number-column"
                >
                   $100,000 
                </td>
                <td
                  class="number-column"
                >
                   $100,000 
                </td>
                <td
                  class="text-center"
                >
                  <div
                    class="custom-control custom-radio"
                  >
                    <input
                      class="custom-control-input"
                      data-qa-id="chk-select-job-1"
                      id="customRadio-1"
                      name="select-job-data"
                      type="radio"
                    />
                    <label
                      class="custom-control-label"
                      for="customRadio-1"
                    >
                       
                    </label>
                  </div>
                </td>
              </tr>
              
              
            </tbody>
          </table>
          
        </pf-async-container>
      </div>
    </div>
  </pf-card-layout>
</pf-data-card>
`;
